--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-body {
+.todo {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 50;
+  background-color: grey;
+}
+.body {
+	color: red;
 }
